--- a/.github/workflows/text_node.yml
+++ b/.github/workflows/text_node.yml
@@ -21,6 +21,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm --prefix /dp_live/back ci
+      - run: npm --prefix /back ci
       # - run: npm run build --if-present
-      - run: npm --prefix /dp_live/back/tests tests
+      - run: npm --prefix /back/tests tests
+
+      # - name: Install dependencies
+      #   run: npm install
+
+      # - name: Test
+      #   run: npm test
