--- a/.github/workflows/text_node.yml
+++ b/.github/workflows/text_node.yml
@@ -20,11 +20,15 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install --workspace=back
+            node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+            run: npm install --workspaces
+      - name: Test
+            run: npm test --workspaces --if-present
+
+
     #   - run: npm --prefix /back ci
       # - run: npm run build --if-present
-      - run: npm test --workspace=back
     #   - run: npm --prefix /back/tests tests
 
       # - name: Install dependencies
