--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,15 @@
 	},
 	"scripts": {
 		"start": "python3 -m http.server 8080",
-		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+		"test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"jest": "^29.3.1"
+		"jest": "^29.4.0"
+	},
+	"dependencies": {
+		"node": "^19.4.0"
 	}
 }
