--- a/.github/workflows/text_node.yml
+++ b/.github/workflows/text_node.yml
@@ -1,10 +1,6 @@
 name: Node.js CI
 
-on:
-  push:
-    branches: [ main, actions ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
