--- a/.github/workflows/CI_test_app.yml
+++ b/.github/workflows/CI_test_app.yml
@@ -15,6 +15,7 @@ jobs:
   test:
     needs: build
     steps:
+      - uses: actions/checkout@v3
       - name: Test
-      run: npm test --workspaces --if-present
+        run: npm test --workspaces --if-present
 
