--- a/.github/workflows/CI_test_app.yml
+++ b/.github/workflows/CI_test_app.yml
@@ -13,7 +13,11 @@ jobs:
         run: npm install --workspaces
 
   test:
+
+    runs-on: ubuntu-latest
+
     needs: build
+
     steps:
       - uses: actions/checkout@v3
       - name: Test
