--- a/.github/workflows/CI_test_app.yml
+++ b/.github/workflows/CI_test_app.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Compose dependence
-        run: docker compose build .
+        run: docker compose build
 
   test:
 
