--- a/.github/workflows/CI_test_app.yml
+++ b/.github/workflows/CI_test_app.yml
@@ -27,6 +27,9 @@ jobs:
 
   merge:
     runs-on: ubuntu-latest
+
+    needs: test
+
     steps:
       - uses: actions/checkout@master
 
@@ -36,4 +39,3 @@ jobs:
           type: now
           target_branch: main
           github_token: ${{ github.token }}
-
