--- a/.github/workflows/CI_test_app.yml
+++ b/.github/workflows/CI_test_app.yml
@@ -25,17 +25,17 @@ jobs:
       - name: Test
         run: npm test --workspaces --if-present
 
-  merge:
-    runs-on: ubuntu-latest
+  # merge:
+  #   runs-on: ubuntu-latest
 
-    needs: test
+  #   needs: test
 
-    steps:
-      - uses: actions/checkout@master
+  #   steps:
+  #     - uses: actions/checkout@master
 
-      - name: Merge actions -> main
-        uses: devmasx/merge-branch@master
-        with:
-          type: now
-          target_branch: main
-          github_token: ${{ github.token }}
+  #     - name: Merge actions -> main
+  #       uses: devmasx/merge-branch@master
+  #       with:
+  #         type: now
+  #         target_branch: main
+  #         github_token: ${{ github.token }}
